update api and some components
