# src/app/api-svc/model/models.ts
@@ -1,9 +1,15 @@
+export * from './apiResponseFavoriteSong';
 export * from './apiResponseGenreDTO';
 export * from './apiResponseLoginResponseDTO';
+export * from './apiResponseSongByCategory';
 export * from './apiResponseSongDTO';
 export * from './apiResponseUserDTO';
 export * from './genreDTO';
 export * from './loginRequestDTO';
 export * from './loginResponseDTO';
+export * from './pageSong';
+export * from './pageableObject';
+export * from './passwordDTO';
 export * from './songDTO';
+export * from './sort';
 export * from './userDTO';
